# ublas

./: .appveyor.yml  .clang-format  .clang-tidy  .drone.star  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  Changelog  Doxyfile  Jamfile  Jamfile.v2  README.adoc  README.html  README.md  banded.hpp  blas.hpp  changelog.txt  codecov.yml  doxydoc.hpp  exception.hpp  expression_types.hpp  fwd.hpp  hermitian.hpp  index.html  io.hpp  matrix.hpp  matrix_proxy.hpp  matrix_sparse.hpp  triangular.hpp  vector.hpp  vector_proxy.hpp  vector_sparse.hpp
.ci/: clang-tidy-review.py  install-clblas.sh  post_review.py  report_coverage.sh
.drone/: before-install.sh  drone.sh
benchmarks/: CMakeLists.txt  Jamfile  mm_prod.cpp  mv_prod.cpp
benchmarks/bench1/: Jamfile.v2  bench1.cpp  bench13.cpp
benchmarks/bench3/: Jamfile.v2  bench3.cpp  bench33.cpp
benchmarks/opencl/: Jamfile
doc/: Jamfile  blas.html  bounded_array.html  container_concept.html  eigensolver.html  index.htm  index.html  operations_overview.html  overview.html  storage_concept.html  tensor.html  ublas-docinfo-footer.html  ublas.adoc  ublas.html  unbounded_array.html  vector.html
examples/tensor/: .clang-tidy  CMakeLists.txt  Jamfile  Jamfile.v2  a.out  access_subtensor.cpp  access_tensor.cpp  construction_access.cpp  dynamic_prod_expressions.cpp  einstein_notation.cpp  example01.cpp  example02.cpp  example03.cpp  example_einstein_notation.cpp  expressions_subtensor.cpp  fixed_rank_prod_expressions.cpp  fixed_rank_tensor.cpp  instantiate_subtensor.cpp  instantiate_tensor.cpp  multiply_tensors_einstein_notation.cpp  multiply_tensors_product_function.cpp  prod_expressions.cpp  prod_expressions_1.cpp  prod_expressions_2.cpp  simple_expressions.cpp  static_prod_expressions.cpp  static_tensor.cpp  subtensor.cpp  tensor_construction.cpp  tensor_storage.cpp
meta/: libraries.json
test/: Jamfile  Jamfile.v2  begin_end.cpp  num_columns.cpp  num_rows.cpp  size.cpp  test11.cpp  test31.cpp  test71.cpp  test_assignment.cpp  test_banded_storage_layout.cpp  test_complex_norms.cpp  test_coordinate_matrix_inplace_merge.cpp  test_coordinate_matrix_sort.cpp  test_coordinate_vector_inplace_merge.cpp  (+3 more)
test/tensor/: CMakeLists.txt  Jamfile  Jamfile.v2  fixture_utility.hpp  test_access.cpp  test_algorithms.cpp  test_basic_shape.cpp  test_compressed_map.cpp  test_einstein_notation.cpp  test_expression.cpp  test_expression_evaluation.cpp  test_extents.cpp  test_extents_dynamic.cpp  test_extents_dynamic_rank_static.cpp  test_extents_functions.cpp  test_extents_helper.cpp  test_fixed_rank_expression_evaluation.cpp  test_fixed_rank_extents.cpp  test_fixed_rank_functions.cpp  test_fixed_rank_operators_arithmetic.cpp  test_fixed_rank_operators_comparison.cpp  test_fixed_rank_strides.cpp  test_fixed_rank_tensor.cpp  test_fixed_rank_tensor_matrix_vector.cpp  test_functions.cpp  test_main.cpp  test_multi_index.cpp  test_multi_index_utility.cpp  test_multiplication.cpp  test_operators_arithmetic.cpp  test_operators_comparison.cpp  test_slice.cpp  test_slice_helper.cpp  test_span.cpp  test_static_expression_evaluation.cpp  test_static_extents.cpp  test_static_functions.cpp  test_static_operators_arithmetic.cpp  test_static_operators_comparison.cpp  test_static_strides.cpp  (+16 more)
test/tensor/algorithm/: test_algorithm_accumulate.cpp  test_algorithm_copy.cpp  test_algorithm_trans.cpp  test_algorithm_transform.cpp
test/tensor/extents/: test_extents_access_operator.cpp  test_extents_assignment_operator.cpp  test_extents_at.cpp  test_extents_comparision.cpp  test_extents_construction.cpp  test_extents_empty.cpp  test_extents_is_matrix.cpp  test_extents_is_scalar.cpp  test_extents_is_tensor.cpp  test_extents_is_valid.cpp  test_extents_is_vector.cpp  test_extents_product.cpp  test_extents_size.cpp
test/tensor/functions/: test_functions_inner.cpp  test_functions_matrix.cpp  test_functions_norm.cpp  test_functions_outer.cpp  test_functions_real_imag_conj.cpp  test_functions_tensor.cpp  test_functions_tensor_permutation.cpp  test_functions_trans.cpp  test_functions_vector.cpp
test/tensor/multiplication/: test_multiplication_inner.cpp  test_multiplication_mtm.cpp  test_multiplication_mtv.cpp  test_multiplication_outer.cpp  test_multiplication_ttm.cpp  test_multiplication_ttt.cpp  test_multiplication_ttt_permutation.cpp  test_multiplication_ttv.cpp
test/tensor/tensor/: test_tensor_access_operator.cpp  test_tensor_assignment_operator.cpp  test_tensor_at.cpp  test_tensor_binary_expression.cpp  test_tensor_comparision.cpp  test_tensor_comparision_with_scalar.cpp  test_tensor_comparision_with_tensor_expression.cpp  test_tensor_construction.cpp  test_tensor_empty.cpp  test_tensor_expression_access.cpp  test_tensor_expression_evaluation_all_extents_equal.cpp  test_tensor_expression_evaluation_retrieve_extents.cpp  test_tensor_operator_arithmetic_assignment.cpp  test_tensor_operator_arithmetic_binary.cpp  test_tensor_operator_arithmetic_unary.cpp  test_tensor_size.cpp  test_tensor_unary_expression.cpp
(+353 files in other folders)
